Tried to fix the issue of whitespace below the background image

--- a/scss/main.sass
+++ b/scss/main.sass
@@ -5,19 +5,12 @@ $yellow: #BB6614;
 $uiColor: #a29896;
 $footerHoover: #3176B1;
 $placeholder: #66AFE9;
-$rain: ('https://github.com/onomesotu/weather/blob/master/pictures/Rain.jpg');
-$snow: ('https://github.com/onomesotu/weather/blob/master/pictures/Snow.jpg');
-$thunderstorm: ('https://github.com/onomesotu/weather/blob/master/pictures/Thunderstorm.jpg');
-$snowfall: ('https://github.com/onomesotu/weather/blob/master/pictures/Snow.jpg');
-$clearsky: ('https://github.com/onomesotu/weather/blob/master/pictures/Clear.jpg');
-$cloudy: ('https://github.com/onomesotu/weather/blob/master/pictures/Clouds.jpg');
-$drizzle: ('https://github.com/onomesotu/weather/blob/master/pictures/Drizzle.jpg');
-$extreme: ('https://github.com/onomesotu/weather/blob/master/pictures/Extreme.jpg');
 
 
-html, body,
+html,
 	margin : 0;
 	padding: 0;
+	height: 100%;
 
 body
 	height: 100%; 
